--- a/examples/holdingsmap/templates/locations.html
+++ b/examples/holdingsmap/templates/locations.html
@@ -1,12 +1,12 @@
-$def with (gmapkey, oclcnum, citation, others)
+$def with (rdata)
 <html>
   <head>
-    <title>Locations for OCLC record $oclcnum</title>
-    <link href="/json/$oclcnum" type="application/json" rel="exhibit/data" />
+    <title>Locations for OCLC record $rdata['oclcnum'] near $rdata['zip']</title>
+    <link href="/json?oclcnum=$rdata['oclcnum']&amp;zip=$rdata['zip']" type="application/json" rel="exhibit/data" />
     <link rel="stylesheet" href="http://matienzo.org/sites/all/themes/blueprint/css/style.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
     <script src="http://static.simile.mit.edu/exhibit/api-2.0/exhibit-api.js"
             type="text/javascript"></script>
-    <script src="http://static.simile.mit.edu/exhibit/extensions-2.0/map/map-extension.js?gmapkey=$gmapkey"
+    <script src="http://static.simile.mit.edu/exhibit/extensions-2.0/map/map-extension.js?gmapkey=$rdata['key']"
             type="text/javascript"></script>
   </head> 
   <body>
@@ -22,30 +22,30 @@ $def with (gmapkey, oclcnum, citation, others)
             </div>
         </div>
       
-      <h1>Holding libraries for record <a href="http://www.worldcat.org/oclc/$oclcnum">$oclcnum</a></h1>
+      <h1>Holding libraries for record <a href="http://www.worldcat.org/oclc/$rdata['oclcnum']">$rdata['oclcnum']</a></h1>
       <div style="float: left; width: 25%; margin-right: 2%;">
          
     
         <div style="margin-bottom: 5%">
             <h2>Citation</h2>
-            <ul><li>$:citation</li></ul>
+            <ul><li>$:rdata['cit']</li></ul>
         </div>
         <div style="margin-bottom: 5%; ">
-        $if others != []:
+        $if rdata['others'] != []:
             <h2>Holdings for Variants Of This Item</h2>
             <ul style="max-height: 200px !important; overflow: auto !important;">
-            $for _ in others:
-                    <li><a href="/locations/$_">$_</a></li>
+            $for _ in rdata['others']:
+                    <li><a href="/locations?oclcnum=$_&amp;zip=$rdata['zip']">$_</a></li>
             </ul>
         </div>
          <div style="margin-bottom: 5%">
               <h2>Find holdings for another item</h2>
-              <form method="post" action="/locations">
-              <p><input type="text" name="oclcnum"/><input type="submit" value="Search"/></p>
-              </form>
+              <form method="post" action="/holdingsmap/locations">
+              <p><label for="ox">OCLC number</label><input type="text" name="oclcnum" size="12" id="ox"/><br/><label for="zx">ZIP code</label><input type="text" name="zip" size="7" id="zx" value="$rdata['zip']"/><input type="submit" value="Search"/></p>
+	      </form>
           </div>
       </div>
-      <div ex:role="view" ex:viewClass="Map" ex:latlng=".addressLatLng" style="float: left; width: 70%;" ex:mapHeight="400" ex:center="40.77,-73.98" ex:zoom="10"></div>
+      <div ex:role="view" ex:viewClass="Map" ex:latlng=".addressLatLng" style="float: left; width: 70%;" ex:mapHeight="400" ex:center="$rdata['ctr'][0],$rdata['ctr'][1]" ex:zoom="10" ex:scaleControl="true"></div>
     </div>
   </body>
 </html>
