add zipcode to display
--HG--
extra : convert_revision : svn%3A9bbe1849-123c-0410-9313-83ec163a5258/python/worldcat/trunk%40602

--- a/examples/holdingsmap/templates/locations.html
+++ b/examples/holdingsmap/templates/locations.html
@@ -22,7 +22,7 @@ $def with (rdata)
             </div>
         </div>
       
-      <h1>Holding libraries for record <a href="http://www.worldcat.org/oclc/$rdata['oclcnum']">$rdata['oclcnum']</a></h1>
+      <h1>Holding libraries for record <a href="http://www.worldcat.org/oclc/$rdata['oclcnum']">$rdata['oclcnum']</a> near $rdata['zip']</h1>
       <div style="float: left; width: 25%; margin-right: 2%;">
         <div style="margin-bottom: 5%">
             <h2>Citation</h2>
