--- a/examples/holdingsmap/templates/index.html
+++ b/examples/holdingsmap/templates/index.html
@@ -14,7 +14,7 @@ $def with (rdata)
       <div style="float: left; width: 25%; margin-right: 2%;">
         <div style="margin-bottom: 5%">
             <h2>Search for an OCLC number's holdings</h2>
-            <form method="post" action="/locations">
+            <form method="get" action="/locations">
             <p><label for="ox">OCLC number</label><input type="text" name="oclcnum" size="12" id="ox"/><br/><label for="zx">ZIP code</label><input type="text" name="zip" size="7" id="zx"/><input type="submit" value="Search"/></p>
             </form>
         </div>
